==> s3ptar/rear-driving-camera/ESP/FT800_DisplayGUI/src/FT_Gpu_Hal.cpp <==
#include "FT_Platform.h"
#include "FT_LCD_Type.h"
#include <Arduino.h>
#include <SPI.h>

ft_bool_t  FT800::Ft_Gpu_Hal_Open()
{
    ft_cmd_fifo_wp = ft_dl_buff_wp = 0;
    status = FT_GPU_HAL_OPENED;
    return 1;
}

ft_void_t  FT800::Ft_Gpu_Hal_Close( )
{
    status = FT_GPU_HAL_CLOSED;
}

ft_void_t  FT800::Ft_Gpu_Hal_StartTransfer( FT_GPU_TRANSFERDIR_T rw,ft_uint32_t addr)
{
    if (FT_GPU_READ == rw){
        //_ss = 0;       // cs low
        digitalWrite(_nSS_PIN, false);
        SPI.transfer(addr >> 16);
        SPI.transfer(addr >> 8);
        SPI.transfer(addr & 0xff);
        SPI.transfer(0); //Dummy Read Byte
        status = FT_GPU_HAL_READING;
    }else{
        //_ss = 0;       // cs low
        digitalWrite(_nSS_PIN, false);
        SPI.transfer(0x80 | (addr >> 16));
        SPI.transfer(addr >> 8);
        SPI.transfer(addr & 0xff);
        status = FT_GPU_HAL_WRITING;
    }
}

ft_void_t  FT800::Ft_Gpu_Hal_StartCmdTransfer( FT_GPU_TRANSFERDIR_T rw, ft_uint16_t count)
{
    Ft_Gpu_Hal_StartTransfer( rw, ft_cmd_fifo_wp + RAM_CMD);
}

ft_uint8_t  FT800::Ft_Gpu_Hal_TransferString( const ft_char8_t *string)
{
    ft_uint16_t length = strlen(string);
    while(length --){
       Ft_Gpu_Hal_Transfer8( *string);
       string ++;
    }
    //Append one null as ending flag
    Ft_Gpu_Hal_Transfer8( 0);
}

ft_uint8_t  FT800::Ft_Gpu_Hal_Transfer8( ft_uint8_t value)
{
        return SPI.transfer(value);   
}

ft_uint16_t  FT800::Ft_Gpu_Hal_Transfer16( ft_uint16_t value)
{
    ft_uint16_t retVal = 0;
 
        if (status == FT_GPU_HAL_WRITING){
        Ft_Gpu_Hal_Transfer8( value & 0xFF);//LSB first
        Ft_Gpu_Hal_Transfer8( (value >> 8) & 0xFF);
    }else{
        retVal = Ft_Gpu_Hal_Transfer8( 0);
        retVal |= (ft_uint16_t)Ft_Gpu_Hal_Transfer8( 0) << 8;
    }
 
    return retVal;
}

ft_uint32_t  FT800::Ft_Gpu_Hal_Transfer32( ft_uint32_t value)
{
    ft_uint32_t retVal = 0;
    if (status == FT_GPU_HAL_WRITING){
        Ft_Gpu_Hal_Transfer16( value & 0xFFFF);//LSB first
        Ft_Gpu_Hal_Transfer16( (value >> 16) & 0xFFFF);
    }else{
        retVal = Ft_Gpu_Hal_Transfer16( 0);
        retVal |= (ft_uint32_t)Ft_Gpu_Hal_Transfer16( 0) << 16;
    }
    return retVal;
}

ft_void_t   FT800::Ft_Gpu_Hal_EndTransfer( )
{
    digitalWrite(_nSS_PIN, true); 
    status = FT_GPU_HAL_OPENED;
}

ft_uint8_t  FT800::Ft_Gpu_Hal_Rd8( ft_uint32_t addr)
{
    ft_uint8_t value;
    Ft_Gpu_Hal_StartTransfer( FT_GPU_READ,addr);
    value = Ft_Gpu_Hal_Transfer8( 0);
    Ft_Gpu_Hal_EndTransfer( );
    return value;
}

ft_uint16_t FT800::Ft_Gpu_Hal_Rd16( ft_uint32_t addr)
{
    ft_uint16_t value;
    Ft_Gpu_Hal_StartTransfer( FT_GPU_READ,addr);
    value = Ft_Gpu_Hal_Transfer16( 0);
    Ft_Gpu_Hal_EndTransfer( );
    return value;
}

ft_uint32_t FT800::Ft_Gpu_Hal_Rd32( ft_uint32_t addr)
{
    ft_uint32_t value;
    Ft_Gpu_Hal_StartTransfer( FT_GPU_READ,addr);
    value = Ft_Gpu_Hal_Transfer32( 0);
    Ft_Gpu_Hal_EndTransfer( );
    return value;
}

ft_void_t FT800::Ft_Gpu_Hal_Wr8( ft_uint32_t addr, ft_uint8_t v)
{   
    Ft_Gpu_Hal_StartTransfer( FT_GPU_WRITE,addr);
    Ft_Gpu_Hal_Transfer8( v);
    Ft_Gpu_Hal_EndTransfer( );
}

ft_void_t FT800::Ft_Gpu_Hal_Wr16( ft_uint32_t addr, ft_uint16_t v)
{
    Ft_Gpu_Hal_StartTransfer( FT_GPU_WRITE,addr);
    Ft_Gpu_Hal_Transfer16( v);
    Ft_Gpu_Hal_EndTransfer( );
}

ft_void_t FT800::Ft_Gpu_Hal_Wr32( ft_uint32_t addr, ft_uint32_t v)
{
    Ft_Gpu_Hal_StartTransfer( FT_GPU_WRITE,addr);
    Ft_Gpu_Hal_Transfer32( v);
    Ft_Gpu_Hal_EndTransfer( );
}

ft_void_t FT800::Ft_Gpu_HostCommand( ft_uint8_t cmd)
{
  digitalWrite(_nSS_PIN, false);
  SPI.transfer(cmd);
  SPI.transfer(0);
  SPI.transfer(0);
  digitalWrite(_nSS_PIN, true);
}

ft_void_t FT800::Ft_Gpu_ClockSelect( FT_GPU_PLL_SOURCE_T pllsource)
{
   Ft_Gpu_HostCommand( pllsource);
}

ft_void_t FT800::Ft_Gpu_PLL_FreqSelect( FT_GPU_PLL_FREQ_T freq)
{
   Ft_Gpu_HostCommand( freq);
}

ft_void_t FT800::Ft_Gpu_PowerModeSwitch( FT_GPU_POWER_MODE_T pwrmode)
{
   Ft_Gpu_HostCommand( pwrmode);
}

ft_void_t FT800::Ft_Gpu_CoreReset( )
{
   Ft_Gpu_HostCommand( 0x68);
}

ft_void_t FT800::Ft_Gpu_Hal_Updatecmdfifo( ft_uint16_t count)
{
     ft_cmd_fifo_wp  = ( ft_cmd_fifo_wp + count) & 4095;
    //4 byte alignment
     ft_cmd_fifo_wp = ( ft_cmd_fifo_wp + 3) & 0xffc;
    Ft_Gpu_Hal_Wr16( REG_CMD_WRITE, ft_cmd_fifo_wp);
}

ft_uint16_t FT800::Ft_Gpu_Cmdfifo_Freespace( )
{
    ft_uint16_t fullness,retval;
 
    fullness = ( ft_cmd_fifo_wp - Ft_Gpu_Hal_Rd16( REG_CMD_READ)) & 4095;
    retval = (FT_CMD_FIFO_SIZE - 4) - fullness;
    return (retval);
}

ft_void_t FT800::Ft_Gpu_Hal_WrCmdBuf( ft_uint8_t *buffer,ft_uint16_t count)
{
    ft_uint32_t length =0, SizeTransfered = 0;   
 
#define MAX_CMD_FIFO_TRANSFER   Ft_Gpu_Cmdfifo_Freespace( )  
    do {                
        length = count;
        if (length > MAX_CMD_FIFO_TRANSFER){
            length = MAX_CMD_FIFO_TRANSFER;
        }
                Ft_Gpu_Hal_CheckCmdBuffer( length);
 
                Ft_Gpu_Hal_StartCmdTransfer( FT_GPU_WRITE,length);
 
                SizeTransfered = 0;
        while (length--) {
                    Ft_Gpu_Hal_Transfer8( *buffer);
                    buffer++;
                    SizeTransfered ++;
        }
                length = SizeTransfered;
 
        Ft_Gpu_Hal_EndTransfer( );
        Ft_Gpu_Hal_Updatecmdfifo( length);
 
        Ft_Gpu_Hal_WaitCmdfifo_empty( );
 
        count -= length;
    }while (count > 0);
}

ft_void_t FT800::Ft_Gpu_Hal_CheckCmdBuffer( ft_uint16_t count)
{
   ft_uint16_t getfreespace;
   do{
        getfreespace = Ft_Gpu_Cmdfifo_Freespace( );
   }while(getfreespace < count);
}

ft_void_t FT800::Ft_Gpu_Hal_WaitCmdfifo_empty( )
{
   while(Ft_Gpu_Hal_Rd16( REG_CMD_READ) != Ft_Gpu_Hal_Rd16( REG_CMD_WRITE));
   
    ft_cmd_fifo_wp = Ft_Gpu_Hal_Rd16( REG_CMD_WRITE);
}

ft_void_t FT800::Ft_Gpu_Hal_WaitLogo_Finish( )
{
    ft_int16_t cmdrdptr,cmdwrptr;
 
    do{
         cmdrdptr = Ft_Gpu_Hal_Rd16( REG_CMD_READ);
         cmdwrptr = Ft_Gpu_Hal_Rd16( REG_CMD_WRITE);
    }while ((cmdwrptr != cmdrdptr) || (cmdrdptr != 0));
     ft_cmd_fifo_wp = 0;
}

ft_void_t FT800::Ft_Gpu_Hal_ResetCmdFifo( )
{
    ft_cmd_fifo_wp = 0;
}

ft_void_t FT800::Ft_Gpu_Hal_WrCmd32( ft_uint32_t cmd)
{
         Ft_Gpu_Hal_CheckCmdBuffer( sizeof(cmd));
      
         Ft_Gpu_Hal_Wr32( RAM_CMD +  ft_cmd_fifo_wp,cmd);
      
         Ft_Gpu_Hal_Updatecmdfifo( sizeof(cmd));
}

ft_void_t FT800::Ft_Gpu_Hal_WrMem( ft_uint32_t addr,const ft_uint8_t *buffer, ft_uint32_t length)
{
    ft_uint32_t SizeTransfered = 0;      
 
    Ft_Gpu_Hal_StartTransfer( FT_GPU_WRITE,addr);
 
    while (length--) {
            Ft_Gpu_Hal_Transfer8( *buffer);
        buffer++;
    }
 
    Ft_Gpu_Hal_EndTransfer( );
}

ft_void_t FT800::Ft_Gpu_Hal_RdMem( ft_uint32_t addr, ft_uint8_t *buffer, ft_uint32_t length)
{
    ft_uint32_t SizeTransfered = 0;      
 
    Ft_Gpu_Hal_StartTransfer( FT_GPU_READ,addr);
 
    while (length--) {
       *buffer = Ft_Gpu_Hal_Transfer8( 0);
       buffer++;
    }
 
    Ft_Gpu_Hal_EndTransfer( );
}

ft_int32_t FT800::Ft_Gpu_Hal_Dec2Ascii(ft_char8_t *pSrc,ft_int32_t value)
{
    ft_int16_t Length;
    ft_char8_t *pdst,charval;
    ft_int32_t CurrVal = value,tmpval,i;
    ft_char8_t tmparray[16],idx = 0;
 
    Length = strlen(pSrc);
    pdst = pSrc + Length;
 
    if(0 == value)
    {
        *pdst++ = '0';
        *pdst++ = '\0';
        return 0;
    }
 
    if(CurrVal < 0)
    {
        *pdst++ = '-';
        CurrVal = - CurrVal;
    }
    /* insert the value */
    while(CurrVal > 0){
        tmpval = CurrVal;
        CurrVal /= 10;
        tmpval = tmpval - CurrVal*10;
        charval = '0' + tmpval;
        tmparray[idx++] = charval;
    }
 
    for(i=0;i<idx;i++)
    {
        *pdst++ = tmparray[idx - i - 1];
    }
    *pdst++ = '\0';
 
    return 0;
}
